production-demos/agw-enterprise-demos/auto-claim-demo/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auto-claims
  labels:
    app.kubernetes.io/part-of: auto-claim-demo
